# legado

./: .gitignore  .pre-commit-config.yaml  CNAME  README.md  README2.md  config.json  data.json  footer.md  header.md  index.html  main.py  pyproject.toml  requirements.txt  rm.py
.github/workflows/: build.yml  (+1 more)
.gitlab/: build.yml
cache/: 1b8256c78b385543b5e8aa6a0d7693c76f8e60d4_filter.json  4dc410d1d0a674de21c5d869496efd60a7fcba7c_filter.json  636dcfbb00cf823c7832c0e5b15d4daa3968de46_filter.json  681453f11a1d44b332b52155b7818f762009e137_filter.json  6c35d84798ddbf4aad3fe3f0fd6cec53dd788be8_filter.json  70ce30e7763254709101fa48516dd7b1df3392db_filter.json  71e56d4f1d8f1bff61fdd3582ef7513600a9e108_filter.json  7662c777995ab5372ac7dc9720910405b73be4cd_filter.json  acfe3dce38979f84578809822d05a19d35687041_filter.json  bb9d06f8ebea51f0ddac44ea6ad6e01e776176a9_filter.json  d7fb261c0dc2b4622845f67e8a5f3c805fd64b64_filter.json  dcd89a1b0f22e088a394d9406ad869a673ac508b_filter.json  fc28a47b1f7708cec14b586981f4be76e30d20c8_filter.json
common/: async_util.py  check_book.py  config.py  date_format.py  fetch.py  file.py  hash_util.py  json_util.py
conf/: book_sources.yml  http_ttss.yml  read_configs.yml  replace_rules.yml  subscribes.yml  themes.yml
source/: all.json  book.json  httpTTS.json  readConfig.json  replaceRule.json  subscribe.json  theme.json
sources/: 39c60133.json  5d6324c5.json  71e56d4f.json  856adf0e.json  9955b83c.json  9c92e8e8.json  bc26bb5e.json  dbc65c69.json  e29e19ee.json  e3e5d620.json  e99a592f.json
src/: cleanup.py  main.py  settings.py
(+41 files in other folders)
